--- a/blog-single.html
+++ b/blog-single.html
@@ -15,7 +15,9 @@
 
 	<!-- Main Stylesheets -->
 	<link rel="stylesheet" href="css/style.css" />
-
+	
+	<link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
+    <link rel="icon" href="img/logo.ico" type="image/x-icon">
 
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -61,14 +63,14 @@
 					<li><a href="./about.html">About</a></li>
 					<li><a href="./gallery.html">Gallery</a>
 						<ul class="sub__menu">
-							<li><a href="./gallery1.html">Red & Coral</a></li>
-							<li><a href="./gallery2.html">White Roses</a></li>
-							<li><a href="./gallery3.html">Pink & Hot Pink</a></li>
-							<li><a href="./gallery4.html">Orange-Yellow & Peach</a></li>
-							<li><a href="./gallery5.html">Green</a></li>
-							<li><a href="./gallery6.html">Lavender</a></li>
-							<li><a href="./gallery7.html">Bicolor</a></li>
-							<li><a href="./gallery8.html">Tinted</a></li>
+							<li><a href="./gallery1.html"> • Red & Coral</a></li>
+							<li><a href="./gallery2.html"> • White Roses</a></li>
+							<li><a href="./gallery3.html"> • Pink & Hot Pink</a></li>
+							<li><a href="./gallery4.html"> • Orange-Yellow & Peach</a></li>
+							<li><a href="./gallery5.html"> • Green</a></li>
+							<li><a href="./gallery6.html"> • Lavender</a></li>
+							<li><a href="./gallery7.html"> • Bicolor</a></li>
+							<li><a href="./gallery8.html"> • Tinted</a></li>
 						</ul>
 					</li>
 					<li><a href="./blog-single.html" class="menu--active">Sustainability</a></li>
@@ -137,8 +139,7 @@
 			sole purpose of improving their living conditions, our company also offers employees transportation
 			and room service ensures a safe working conditions.
 			We have an environmental policy that maintains the integrity of the ecosystems by preventing
-			alteration
-			or destruction through the implementation of support programs and continuous commitment work.
+			alteration or destruction through the implementation of support programs and continuous commitment work.
 		</p>
 	</div>
 
