--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,9 @@
 	<!-- Main Stylesheets -->
 	<link rel="stylesheet" href="css/style.css" />
 
+	<link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
+    <link rel="icon" href="img/logo.ico" type="image/x-icon">
+
 </head>
 
 <body>
@@ -52,14 +55,14 @@
 					<li><a href="./about.html">About</a></li>
 					<li><a href="./gallery.html">Gallery</a>
 						<ul class="sub__menu">
-							<li><a href="./gallery1.html">Red & Coral</a></li>
-							<li><a href="./gallery2.html">White Roses</a></li>
-							<li><a href="./gallery3.html">Pink & Hot Pink</a></li>
-							<li><a href="./gallery4.html">Orange-Yellow & Peach</a></li>
-							<li><a href="./gallery5.html">Green</a></li>
-							<li><a href="./gallery6.html">Lavender</a></li>
-							<li><a href="./gallery7.html">Bicolor</a></li>
-							<li><a href="./gallery8.html">Tinted</a></li>
+							<li><a href="./gallery1.html"> • Red & Coral</a></li>
+							<li><a href="./gallery2.html"> • White Roses</a></li>
+							<li><a href="./gallery3.html"> • Pink & Hot Pink</a></li>
+							<li><a href="./gallery4.html"> • Orange-Yellow & Peach</a></li>
+							<li><a href="./gallery5.html"> • Green</a></li>
+							<li><a href="./gallery6.html"> • Lavender</a></li>
+							<li><a href="./gallery7.html"> • Bicolor</a></li>
+							<li><a href="./gallery8.html"> • Tinted</a></li>
 						</ul>
 					</li>
 					<li><a href="./blog-single.html">Sustainability</a></li>
