--- a/gallery5.html
+++ b/gallery5.html
@@ -15,6 +15,8 @@
 	<link rel="stylesheet" href="css/gallery.css" />
 	<!-- Main Stylesheets -->
 	<link rel="stylesheet" href="css/style.css" />
+	<link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
+    <link rel="icon" href="img/logo.ico" type="image/x-icon">
 
 
 	<!--[if lt IE 9]>
