--- a/blog-single.html
+++ b/blog-single.html
@@ -124,7 +124,7 @@
 			<img src="img/eco/3.JPG" alt="image3">
 		</div>
 		<div class="blog__slider__item">
-			<img src="img/eco/4.JPG" alt="image4">
+			<img src="img/eco/44.jpg" alt="image4">
 		</div>
 	</div>
 
