--- a/blog-single.html
+++ b/blog-single.html
@@ -64,12 +64,12 @@
 					<li><a href="./gallery.html">Gallery</a>
 						<ul class="sub__menu">
 							<li><a href="./gallery1.html"> • Red & Coral</a></li>
-							<li><a href="./gallery2.html"> • White Roses</a></li>
+							<li><a href="./gallery2.html"> • White & Cream</a></li>
 							<li><a href="./gallery3.html"> • Pink & Hot Pink</a></li>
 							<li><a href="./gallery4.html"> • Orange-Yellow & Peach</a></li>
 							<li><a href="./gallery5.html"> • Green</a></li>
 							<li><a href="./gallery6.html"> • Lavender</a></li>
-							<li><a href="./gallery7.html"> • Bicolor</a></li>
+							<li><a href="./gallery7.html"> • Bicolor & Novelty</a></li>
 							<li><a href="./gallery8.html"> • Tinted</a></li>
 						</ul>
 					</li>
@@ -85,7 +85,7 @@
 	<div class="video-background-holder my-5">
 		<div class="video-background-overlay"></div>
 		<video id="bckVideo" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-			<source src="video/video1.mp4" type="video/mp4">
+			<source src="video/video2.mp4" type="video/mp4">
 		</video>
 		<div class="video-background-content container h-100">
 			<div class="d-flex h-100 text-center align-items-center">
@@ -102,9 +102,10 @@
 	<article class="blog__article">
 		<div class="blog__container">
 			<div class="blog__header">
-				<div class="blog__cata">Rainforest & SEDEX - SMETA Certified</div>
+				<div class="blog__cata mb-4">Rainforest & SEDEX - SMETA Certified</div>
 				<h2 class="blog__single__title">Success is sustainable growth</h2>
 			</div>
+		</div>
 	</article>
 	<div class="blog__container">
 		<p> As employers we are aware of our important social role, a fundamental part of the flower
@@ -124,7 +125,7 @@
 			<img src="img/eco/3.JPG" alt="image3">
 		</div>
 		<div class="blog__slider__item">
-			<img src="img/eco/44.jpg" alt="image4">
+			<img src="img/eco/4.jpg" alt="image4">
 		</div>
 	</div>
 
@@ -204,12 +205,24 @@
 				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
 
 					<!-- Links -->
-					<h6 class="text-uppercase font-weight-bold">Products</h6>
+					<h6 class="text-uppercase font-weight-bold"> Products</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><a href="gallery1.html">Red roses</a></p>
-					<p><a href="gallery4.html">Yellow roses</a></p>
-					<p><a href="gallery7.html">Bicolor</a></p>
-					<p><a href="gallery.html">All our roses</a></p>
+					<p><a href="gallery1.html">Red & Coral</a></p>
+					<p><a href="gallery2.html">White Roses</a></p>
+					<p><a href="gallery3.html">Pink & Hot Pink</a></p>
+					<p><a href="gallery4.html">Orange-Yellow & Peach</a></p>
+
+				</div>
+
+				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+					<!-- Links -->
+					<h6 class="text-uppercase font-weight-bold text-white">Products</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><a href="gallery5.html">Green</a></p>
+					<p><a href="gallery6.html">Lavender</a></p>
+					<p><a href="gallery7.html">Bicolor & Novelty</a></p>
+					<p><a href="gallery8.html">Tinted</a></p>
 
 				</div>
 
