--- a/contact.html
+++ b/contact.html
@@ -56,12 +56,12 @@
 					<li><a href="./gallery.html">Gallery</a>
 						<ul class="sub__menu">
 							<li><a href="./gallery1.html"> • Red & Coral</a></li>
-							<li><a href="./gallery2.html"> • White Roses</a></li>
+							<li><a href="./gallery2.html"> • White & Cream</a></li>
 							<li><a href="./gallery3.html"> • Pink & Hot Pink</a></li>
 							<li><a href="./gallery4.html"> • Orange-Yellow & Peach</a></li>
 							<li><a href="./gallery5.html"> • Green</a></li>
 							<li><a href="./gallery6.html"> • Lavender</a></li>
-							<li><a href="./gallery7.html"> • Bicolor</a></li>
+							<li><a href="./gallery7.html"> • Bicolor & Novelty</a></li>
 							<li><a href="./gallery8.html"> • Tinted</a></li>
 						</ul>
 					</li>
@@ -102,12 +102,16 @@
 					<div class="contact__text">
 						<p>Phone: + 305-900-3793</p>
 						<p>1665 NW 102 Av. Suite 108 Doral, FL 33172</p> <br>
+						<p><b>José Luis Suarez</b></p>
+						<p>Whatsapp: +57 315 346 7156 </p>
+						<p>Email: jlsuarez@bellaflowers.co </p> <br>
 						<p><b> Liliana Rodriguez </b> </p>
 						<p>Whatsapp: +57 320 376 4759</p>
 						<p>Email: lrodriguez@bellaflowers.co </p> <br>
 						<p><b>Jorge Gómez</b></p>
 						<p>Whatsapp: +57 315 694 4600 </p>
-						<p>Email: jgomez@bellaflowers.co </p>
+						<p>Email: jgomez@bellaflowers.co </p> 
+
 					</div>
 				</div>
 			</div>
@@ -176,12 +180,24 @@
 				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
 
 					<!-- Links -->
-					<h6 class="text-uppercase font-weight-bold">Products</h6>
+					<h6 class="text-uppercase font-weight-bold"> Products</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><a href="gallery1.html">Red roses</a></p>
-					<p><a href="gallery4.html">Yellow roses</a></p>
-					<p><a href="gallery7.html">Bicolor</a></p>
-					<p><a href="gallery.html">All our roses</a></p>
+					<p><a href="gallery1.html">Red & Coral</a></p>
+					<p><a href="gallery2.html">White Roses</a></p>
+					<p><a href="gallery3.html">Pink & Hot Pink</a></p>
+					<p><a href="gallery4.html">Orange-Yellow & Peach</a></p>
+
+				</div>
+
+				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+					<!-- Links -->
+					<h6 class="text-uppercase font-weight-bold text-white">Products</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><a href="gallery5.html">Green</a></p>
+					<p><a href="gallery6.html">Lavender</a></p>
+					<p><a href="gallery7.html">Bicolor & Novelty</a></p>
+					<p><a href="gallery8.html">Tinted</a></p>
 
 				</div>
 
