--- a/gallery.html
+++ b/gallery.html
@@ -61,12 +61,12 @@
 					<li><a href="./gallery.html" class="menu--active">Gallery</a>
 						<ul class="sub__menu">
 							<li><a href="./gallery1.html"> • Red & Coral</a></li>
-							<li><a href="./gallery2.html"> • White Roses</a></li>
+							<li><a href="./gallery2.html"> • White & Cream</a></li>
 							<li><a href="./gallery3.html"> • Pink & Hot Pink</a></li>
 							<li><a href="./gallery4.html"> • Orange-Yellow & Peach</a></li>
 							<li><a href="./gallery5.html"> • Green</a></li>
 							<li><a href="./gallery6.html"> • Lavender</a></li>
-							<li><a href="./gallery7.html"> • Bicolor</a></li>
+							<li><a href="./gallery7.html"> • Bicolor & Novelty</a></li>
 							<li><a href="./gallery8.html"> • Tinted</a></li>
 						</ul>
 					</li>
@@ -95,7 +95,7 @@
 			  <div class="card card-cascade narrower card-ecommerce ">
 				<!-- Card image -->
 				<div class="view view-cascade overlay img-hover-zoom img-hover-zoom--xyz">
-				  <img src="img/gallery1.png" class="card-img-top"
+				  <img src="img/gallery/red/freedom.png" class="card-img-top"
 					alt="sample photo">
 				  <a>
 					<div class="mask rgba-white-slight"></div>
@@ -130,7 +130,7 @@
 			  <div class="card card-cascade narrower card-ecommerce">
 				<!-- Card image -->
 				<div class="view view-cascade overlay img-hover-zoom img-hover-zoom--xyz">
-				  <img src="img/gallery2.png" class="card-img-top"
+				  <img src="img/gallery/white/vendela.png" class="card-img-top"
 					alt="sample photo">
 				  <a>
 					<div class="mask rgba-white-slight"></div>
@@ -142,7 +142,7 @@
 				  <!-- Title -->
 				  <h5 class="card-title mb-1">
 					<strong>
-					  <a href="">White</a>
+					  <a href="gallery2.html">White & Cream</a>
 					</strong>
 				  </h5>
 				  <!-- Description -->
@@ -164,7 +164,7 @@
 			  <div class="card card-cascade narrower card-ecommerce">
 				<!-- Card image -->
 				<div class="view view-cascade overlay img-hover-zoom img-hover-zoom--xyz">
-				  <img src="img/gallery3.png" class="card-img-top"
+				  <img src="img/gallery/pink/hot_paris.png" class="card-img-top"
 					alt="sample photo">
 				  <a>
 					<div class="mask rgba-white-slight"></div>
@@ -199,7 +199,7 @@
 			  <div class="card card-cascade narrower card-ecommerce">
 				<!-- Card image -->
 				<div class="view view-cascade overlay img-hover-zoom img-hover-zoom--xyz">
-				  <img src="img/gallery4.png" class="card-img-top"
+				  <img src="img/gallery/yellow/tycoon.png" class="card-img-top"
 					alt="sample photo">
 				  <a>
 					<div class="mask rgba-white-slight"></div>
@@ -232,7 +232,7 @@
 				<div class="card card-cascade narrower card-ecommerce">
 				  <!-- Card image -->
 				  <div class="view view-cascade overlay img-hover-zoom img-hover-zoom--xyz">
-					<img src="img/gallery5.png" class="card-img-top"
+					<img src="img/gallery/green/lemonade.png" class="card-img-top"
 					  alt="sample photo">
 					<a>
 					  <div class="mask rgba-white-slight"></div>
@@ -265,7 +265,7 @@
 				<div class="card card-cascade narrower card-ecommerce">
 				  <!-- Card image -->
 				  <div class="view view-cascade overlay img-hover-zoom img-hover-zoom--xyz">
-					<img src="img/gallery6.png" class="card-img-top"
+					<img src="img/gallery/lavender/deep_purple.png" class="card-img-top"
 					  alt="sample photo">
 					<a>
 					  <div class="mask rgba-white-slight"></div>
@@ -298,7 +298,7 @@
 				<div class="card card-cascade narrower card-ecommerce">
 				  <!-- Card image -->
 				  <div class="view view-cascade overlay img-hover-zoom img-hover-zoom--xyz">
-					<img src="img/gallery7.png" class="card-img-top"
+					<img src="img/gallery/bicolor/cabaret.png" class="card-img-top"
 					  alt="sample photo">
 					<a>
 					  <div class="mask rgba-white-slight"></div>
@@ -310,7 +310,7 @@
 					<!-- Title -->
 					<h5 class="card-title mb-1">
 					  <strong>
-						<a href="gallery7.html">Bicolor</a>
+						<a href="gallery7.html">Bicolor & Novelty</a>
 					  </strong>
 					</h5>
 				   <!-- Description -->
@@ -331,7 +331,7 @@
 				<div class="card card-cascade narrower card-ecommerce">
 				  <!-- Card image -->
 				  <div class="view view-cascade overlay img-hover-zoom img-hover-zoom--xyz">
-					<img src="img/gallery8.png" class="card-img-top"
+					<img src="img/gallery/tinted/flag.png" class="card-img-top"
 					  alt="sample photo">
 					<a>
 					  <div class="mask rgba-white-slight"></div>
@@ -424,12 +424,24 @@
 			<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
 
 				<!-- Links -->
-				<h6 class="text-uppercase font-weight-bold">Products</h6>
+				<h6 class="text-uppercase font-weight-bold"> Products</h6>
 				<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-				<p><a href="gallery1.html">Red roses</a></p>
-				<p><a href="gallery4.html">Yellow roses</a></p>
-				<p><a href="gallery7.html">Bicolor</a></p>
-				<p><a href="gallery.html">All our roses</a></p>
+				<p><a href="gallery1.html">Red & Coral</a></p>
+				<p><a href="gallery2.html">White Roses</a></p>
+				<p><a href="gallery3.html">Pink & Hot Pink</a></p>
+				<p><a href="gallery4.html">Orange-Yellow & Peach</a></p>
+
+			</div>
+
+			<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+				<!-- Links -->
+				<h6 class="text-uppercase font-weight-bold text-white">Products</h6>
+				<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+				<p><a href="gallery5.html">Green</a></p>
+				<p><a href="gallery6.html">Lavender</a></p>
+				<p><a href="gallery7.html">Bicolor & Novelty</a></p>
+				<p><a href="gallery8.html">Tinted</a></p>
 
 			</div>
 
