--- a/gallery2.html
+++ b/gallery2.html
@@ -62,12 +62,12 @@
 					<li><a href="./gallery.html" class="menu--active">Gallery</a>
 						<ul class="sub__menu">
 							<li><a href="./gallery1.html"> • Red & Coral</a></li>
-							<li><a href="./gallery2.html"> • White Roses</a></li>
+							<li><a href="./gallery2.html"> • White & Cream</a></li>
 							<li><a href="./gallery3.html"> • Pink & Hot Pink</a></li>
 							<li><a href="./gallery4.html"> • Orange-Yellow & Peach</a></li>
 							<li><a href="./gallery5.html"> • Green</a></li>
 							<li><a href="./gallery6.html"> • Lavender</a></li>
-							<li><a href="./gallery7.html"> • Bicolor</a></li>
+							<li><a href="./gallery7.html"> • Bicolor & Novelty</a></li>
 							<li><a href="./gallery8.html"> • Tinted</a></li>
 						</ul>
 					</li>
@@ -119,16 +119,16 @@
 					</div>
 
 					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/white/playa_blanca.png"
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/white/playa_blanca2.png"
 							data-fresco-group="gallery">
-							<img src="img/gallery/white/playa_blanca.png" alt="playa Blanca">
+							<img src="img/gallery/white/playa_blanca2.png" alt="playa Blanca">
 							<div class="blog__content text-white mb-5">
 								<h3> • Playa Blanca</h3>
 							</div>
 						</a>
 					</div>
 
-					<div class="col-lg-3 col-md-4 col-sm-6">
+					<div class="col-lg-4 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/white/sugar_doll.png"
 							data-fresco-group="gallery">
 							<img src="img/gallery/white/sugar_doll.png" alt="Sugar Doll">
@@ -138,7 +138,7 @@
 						</a>
 					</div>
 
-					<div class="col-lg-3 col-md-4 col-sm-6">
+					<div class="col-lg-4 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/white/snow_bliss.png"
 							data-fresco-group="gallery">
 							<img src="img/gallery/white/snow_bliss.png" alt="Snow bliss">
@@ -148,22 +148,12 @@
 						</a>
 					</div>
 
-					<div class="col-lg-3 col-md-4 col-sm-6">
+					<div class="col-lg-4 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/white/cotopaxi.png"
 							data-fresco-group="gallery">
 							<img src="img/gallery/white/cotopaxi.png" alt="Cotopaxi">
 							<div class="blog__content text-white mb-5">
 								<h3> • Cotopaxi</h3>
-							</div>
-						</a>
-					</div>
-
-					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/white/white_chocolate.png"
-							data-fresco-group="gallery">
-							<img src="img/gallery/white/white_chocolate.png" alt="white Chocolate">
-							<div class="blog__content text-white mb-5">
-								<h3> • White Chocolate</h3>
 							</div>
 						</a>
 					</div>
@@ -233,12 +223,24 @@
 				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
 
 					<!-- Links -->
-					<h6 class="text-uppercase font-weight-bold">Products</h6>
+					<h6 class="text-uppercase font-weight-bold"> Products</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><a href="gallery1.html">Red roses</a></p>
-					<p><a href="gallery4.html">Yellow roses</a></p>
-					<p><a href="gallery7.html">Bicolor</a></p>
-					<p><a href="gallery.html">All our roses</a></p>
+					<p><a href="gallery1.html">Red & Coral</a></p>
+					<p><a href="gallery2.html">White Roses</a></p>
+					<p><a href="gallery3.html">Pink & Hot Pink</a></p>
+					<p><a href="gallery4.html">Orange-Yellow & Peach</a></p>
+
+				</div>
+
+				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+					<!-- Links -->
+					<h6 class="text-uppercase font-weight-bold text-white">Products</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><a href="gallery5.html">Green</a></p>
+					<p><a href="gallery6.html">Lavender</a></p>
+					<p><a href="gallery7.html">Bicolor & Novelty</a></p>
+					<p><a href="gallery8.html">Tinted</a></p>
 
 				</div>
 
