--- a/gallery3.html
+++ b/gallery3.html
@@ -60,12 +60,12 @@
 					<li><a href="./gallery.html" class="menu--active">Gallery</a>
 						<ul class="sub__menu">
 							<li><a href="./gallery1.html"> • Red & Coral</a></li>
-							<li><a href="./gallery2.html"> • White Roses</a></li>
+							<li><a href="./gallery2.html"> • White & Cream</a></li>
 							<li><a href="./gallery3.html"> • Pink & Hot Pink</a></li>
 							<li><a href="./gallery4.html"> • Orange-Yellow & Peach</a></li>
 							<li><a href="./gallery5.html"> • Green</a></li>
 							<li><a href="./gallery6.html"> • Lavender</a></li>
-							<li><a href="./gallery7.html"> • Bicolor</a></li>
+							<li><a href="./gallery7.html"> • Bicolor & Novelty</a></li>
 							<li><a href="./gallery8.html"> • Tinted</a></li>
 						</ul>
 					</li>
@@ -187,9 +187,9 @@
 					</div>
 
 					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/pink/enjoy.png"
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/pink/enjoy2.png"
 							data-fresco-group="gallery">
-							<img src="img/gallery/pink/enjoy.png" alt="enjoy">
+							<img src="img/gallery/pink/enjoy2.png" alt="enjoy">
 							<div class="blog__content text-white mb-5">
 								<h3>• Enjoy</h3>
 							</div>
@@ -311,12 +311,24 @@
 			<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
 
 				<!-- Links -->
-				<h6 class="text-uppercase font-weight-bold">Products</h6>
+				<h6 class="text-uppercase font-weight-bold"> Products</h6>
 				<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-				<p><a href="gallery1.html">Red roses</a></p>
-				<p><a href="gallery4.html">Yellow roses</a></p>
-				<p><a href="gallery7.html">Bicolor</a></p>
-				<p><a href="gallery.html">All our roses</a></p>
+				<p><a href="gallery1.html">Red & Coral</a></p>
+				<p><a href="gallery2.html">White Roses</a></p>
+				<p><a href="gallery3.html">Pink & Hot Pink</a></p>
+				<p><a href="gallery4.html">Orange-Yellow & Peach</a></p>
+
+			</div>
+
+			<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+				<!-- Links -->
+				<h6 class="text-uppercase font-weight-bold text-white">Products</h6>
+				<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+				<p><a href="gallery5.html">Green</a></p>
+				<p><a href="gallery6.html">Lavender</a></p>
+				<p><a href="gallery7.html">Bicolor & Novelty</a></p>
+				<p><a href="gallery8.html">Tinted</a></p>
 
 			</div>
 
