--- a/gallery7.html
+++ b/gallery7.html
@@ -62,12 +62,12 @@
 					<li><a href="./gallery.html" class="menu--active">Gallery</a>
 						<ul class="sub__menu">
 							<li><a href="./gallery1.html"> • Red & Coral</a></li>
-							<li><a href="./gallery2.html"> • White Roses</a></li>
+							<li><a href="./gallery2.html"> • White & Cream</a></li>
 							<li><a href="./gallery3.html"> • Pink & Hot Pink</a></li>
 							<li><a href="./gallery4.html"> • Orange-Yellow & Peach</a></li>
 							<li><a href="./gallery5.html"> • Green</a></li>
 							<li><a href="./gallery6.html"> • Lavender</a></li>
-							<li><a href="./gallery7.html"> • Bicolor</a></li>
+							<li><a href="./gallery7.html"> • Bicolor & Novelty</a></li>
 							<li><a href="./gallery8.html"> • Tinted</a></li>
 						</ul>
 					</li>
@@ -110,15 +110,6 @@
 						</a>
 					</div>	
 					
-					<div class="col-lg-4 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/bicolor/sweetness.png"
-							data-fresco-group="gallery">
-							<img src="img/gallery/bicolor/sweetness.png" alt="Sweetness">
-							<div class="blog__content text-white mb-5">
-								<h3> • Sweetness</h3>
-							</div>
-						</a>
-					</div>	
 
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/bicolor/magic_times.png"
@@ -160,7 +151,7 @@
 						</a>
 					</div>	
 
-					<div class="col-lg-4 col-md-4 col-sm-6">
+					<div class="col-lg-6 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/bicolor/esperance.png"
 							data-fresco-group="gallery">
 							<img src="img/gallery/bicolor/esperance.png" alt="Esperance">
@@ -170,7 +161,7 @@
 						</a>
 					</div>	
 
-					<div class="col-lg-4 col-md-4 col-sm-6">
+					<div class="col-lg-6 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/bicolor/tormenta.png"
 							data-fresco-group="gallery">
 							<img src="img/gallery/bicolor/tormenta.png" alt="Tormenta">
@@ -180,22 +171,22 @@
 						</a>
 					</div>	
 
-					<div class="col-lg-4 col-md-4 col-sm-6">
+					<div class="col-lg-6 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/bicolor/silantoi.png"
 							data-fresco-group="gallery">
 							<img src="img/gallery/bicolor/silantoi.png" alt="Silantoi">
 							<div class="blog__content text-white mb-5">
-								<h3> • Silantoi</h3>
+								<h3> &nbsp; • Silantoi</h3>
 							</div>
 						</a>
 					</div>	
 
-					<div class="col-lg-4 col-md-4 col-sm-6">
+					<div class="col-lg-6 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/bicolor/frutetto.png"
 							data-fresco-group="gallery">
 							<img src="img/gallery/bicolor/frutetto.png" alt="Frutetto">
 							<div class="blog__content text-white mb-5">
-								<h3> • Frutetto</h3>
+								<h3> &nbsp; • Frutetto</h3>
 							</div>
 						</a>
 					</div>
@@ -266,12 +257,24 @@
 				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
 
 					<!-- Links -->
-					<h6 class="text-uppercase font-weight-bold">Products</h6>
+					<h6 class="text-uppercase font-weight-bold"> Products</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><a href="gallery1.html">Red roses</a></p>
-					<p><a href="gallery4.html">Yellow roses</a></p>
-					<p><a href="gallery7.html">Bicolor</a></p>
-					<p><a href="gallery.html">All our roses</a></p>
+					<p><a href="gallery1.html">Red & Coral</a></p>
+					<p><a href="gallery2.html">White Roses</a></p>
+					<p><a href="gallery3.html">Pink & Hot Pink</a></p>
+					<p><a href="gallery4.html">Orange-Yellow & Peach</a></p>
+
+				</div>
+
+				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+					<!-- Links -->
+					<h6 class="text-uppercase font-weight-bold text-white">Products</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><a href="gallery5.html">Green</a></p>
+					<p><a href="gallery6.html">Lavender</a></p>
+					<p><a href="gallery7.html">Bicolor & Novelty</a></p>
+					<p><a href="gallery8.html">Tinted</a></p>
 
 				</div>
 
