--- a/gallery8.html
+++ b/gallery8.html
@@ -310,12 +310,24 @@
 				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
 
 					<!-- Links -->
-					<h6 class="text-uppercase font-weight-bold">Products</h6>
+					<h6 class="text-uppercase font-weight-bold"> Products</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><a href="gallery1.html">Red roses</a></p>
-					<p><a href="gallery4.html">Yellow roses</a></p>
-					<p><a href="gallery7.html">Bicolor</a></p>
-					<p><a href="gallery.html">All our roses</a></p>
+					<p><a href="gallery1.html">Red & Coral</a></p>
+					<p><a href="gallery2.html">White Roses</a></p>
+					<p><a href="gallery3.html">Pink & Hot Pink</a></p>
+					<p><a href="gallery4.html">Orange-Yellow & Peach</a></p>
+
+				</div>
+
+				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+					<!-- Links -->
+					<h6 class="text-uppercase font-weight-bold text-white">Products</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><a href="gallery5.html">Green</a></p>
+					<p><a href="gallery6.html">Lavender</a></p>
+					<p><a href="gallery7.html">Bicolor & Novelty</a></p>
+					<p><a href="gallery8.html">Tinted</a></p>
 
 				</div>
 
